2010-08-02  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Eric Seidel.

        Range::create should not be calling deprecatedEditingOffset and node on start and end
        https://bugs.webkit.org/show_bug.cgi?id=43385

        Replaced node() and deprecatedEditingOffset() by containerNode() and computeOffsetInContainerNode().

        No new tests added since this does not change the behavior.

        * dom/Range.cpp:
        (WebCore::Range::create):


Canonical link: https://commits.webkit.org/55338@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64516 268f45cc-cd09-0410-ab3c-d52691b4dbfc